kubeadm/glasslab-v2/workflow-api/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glasslab-workflow-api
  namespace: glasslab-v2
spec:
  selector:
    app.kubernetes.io/name: glasslab-workflow-api
  ports:
    - name: http
      port: 8080
      targetPort: http
